# Tesseract

./: README.md  check-state.js  test-e2e.js
backend/: .env.example  README.md  chainlink.js  config.js  debug-tick.js  failed-tx-analysis.json  failed-tx-analysis.md  package-lock.json  package.json  server.js  test-report.json  test-report.md
backend/routes/: bridge.js  oracle.js
backend/scripts/: _check_tx.mjs  _deploy_neural.mjs  _deploy_nosel.mjs  _deploy_test2.mjs  _estimate_gas.mjs  analyze-failed-tx.js  deploy-pvm.mjs  deploy_mini.mjs  deploy_test.mjs  test-full.js  verify-pvm-contracts.mjs  wire-yield-pool.js
backend/services/: bridge-service.js  oracle-service.js  yield-strategy-service.js
backend/src/: aiEngine.js  protocolPing.js  xcmAcknowledger.js
contracts/: .gitignore  PHASE_1_2_COMPLETION_RUNBOOK.md  README.md  addresses-latest.md  calc.py  foundry.toml  legacy-contract.json  report.md  test-checklist.md
contracts/evm/: EthBridgeInbox.sol  KredioAccountRegistry.sol  KredioBridgeMinter.sol  KredioLending.sol  KredioPASMarket.sol  KredioXCMSettler.sol  MockPASOracle.sol
contracts/kredit_agent/: Cargo.toml  lib.rs
contracts/pvm/neural_scorer/: Cargo.toml  lib.rs
contracts/pvm/yield_mind/: Cargo.toml  lib.rs
contracts/script/: Deploy.s.sol  DeployBridge.s.sol
contracts/scripts/: deploy-pvm.mjs
frontend/: .gitignore  README.md  landiingpage.jsx  layout.tsx  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace  (+10 more)
oracle-feeder/: oracle-feeder.js  package-lock.json  package.json  pas_oracle_feed.json
(+1015 files in other folders)
