[package]
name = "neural_scorer"
version = "1.0.0"
edition = "2021"
authors = ["Kredio"]

[lib]
path = "lib.rs"

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }

[features]
default = ["std"]
std = [
    "ink/std",
]

[profile.release]
overflow-checks = false
opt-level = "z"
