[package]
name = "yield_mind"
version = "1.0.0"
edition = "2021"
authors = ["Kredio"]

[lib]
path = "lib.rs"

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "scale-info/std",
]

[profile.release]
overflow-checks = false
opt-level = "z"
